<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="@drawable/ic_arrow_left"
        app:title="Product Detail"
        android:clipToPadding="false"
        android:layout_marginBottom="10dp"
        app:layout_collapseMode="pin"
        app:layout_constraintTop_toTopOf="parent"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/buy">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivProduct"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                app:layout_constraintDimensionRatio="H, 1:1"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/ivProduct"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="Product Title"/>

            <TextView
                android:id="@+id/strikePrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/gray60"
                android:textSize="12sp"
                android:maxLines="2"
                android:ellipsize="end"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@id/title"
                app:layout_constraintStart_toStartOf="@id/title"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="Rp 12.000"/>

            <TextView
                android:id="@+id/productPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:maxLines="2"
                android:ellipsize="end"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@id/strikePrice"
                app:layout_constraintStart_toStartOf="@id/title"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="Rp 12.000"/>

            <LinearLayout
                android:id="@+id/dimensionContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="10dp"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintTop_toBottomOf="@id/productPrice">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:text="@string/dimension"/>

                <TextView
                    android:id="@+id/dimension"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textAlignment="textEnd"
                    tools:text="10 cm x 10 cm"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/unitContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="10dp"
                android:weightSum="2"
                app:layout_constraintTop_toBottomOf="@id/dimensionContainer">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:text="@string/price_unit"/>

                <TextView
                    android:id="@+id/unit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textAlignment="textEnd"
                    tools:text="PCS"/>

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <Button
        android:id="@+id/buy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"
        android:layout_marginVertical="20sp"
        android:text="@string/buy"
        app:layout_constraintTop_toBottomOf="@id/scrollView"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>